<resources>
    <string name="app_name">Hima Chat</string>
    <string name="register_page">Register</string>
    <string name="terms_page">Terms and Condition</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="description">This menu contain all neuro knowledge</string>

    <!--address server-->
    <string name="domain_url">http://10.5.13.155:3000/api</string>

    <!--GUI-->
    <string name="register"><u>Register</u></string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="date_birth">Birth Date</string>
    <string name="address">Office Address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="accept">Accept</string>
    <string name="terms_short">Agree to Terms and Conditions. </string>
    <string name="read_more"><b><u>Read More</u></b></string>

    <string name="terms_long">
        <html><head></head><body>
        <h2>Welcome to Neuropedia Apps!</h2>
        <p>These terms and conditions outline the rules and regulations for the use of  Neuropedia Apps, by Buah Batu Tech.<br />
            <span style="text-transform: capitalize;">Buah Batu Technology</span> is located at:<br />
            <address>
                Jalan Telekomunikasi no.1 , <br />
                Bandung, West Java 40257<br />
                Indonesia<br />
            </address>
            By using this application we assume you accept these terms and conditions in full. Do not continue to use this app if you do not accept all of the terms and conditions stated on this page.
        </p>
        <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and any or all Agreements: "Client", "You" and "Your" refers to you, the person using this application and accepting the Companys terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves, or either the Client or ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner, whether by formal meetings of a fixed duration, or any other means, for the express purpose of meeting the Client\'s needs in respect of provision of the Company\'s stated services/products, in accordance with and subject to, prevailing law of Indonesia. Any use of the above terminology or other words in the singular, plural, capitalisation and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p>

        <h2>License</h2>
        <p>Unless otherwise stated, Buah Batu Technology and/or it\'s licensors own the intellectual property rights for all material on Buah Batu Technology All intellectual property rights are reserved. You may view and/or print pages from Neuropedia Apps for your own personal use subject to restrictions set in these terms and conditions.</p>
        <p>You must not:</p>
        <ul>
            <li>Republish material from Neuropedia Apps</li>
            <li>Sell, rent or sub-license material from Neuropedia Apps</li>
            <li>Reproduce, duplicate or copy material from Neuropedia Apps</li>
        </ul>
        <p>Redistribute content from Buah Batu Technology (unless content is specifically made for redistribution).</p>

        <h2>Iframes</h2>
        <p>Without prior approval and express written permission, you may not create frames around our Web pages or use other techniques that alter in any way the visual presentation or appearance of our Web site.</p>

        <h2>Reservation of Rights</h2>
        <p>We reserve the right at any time and in its sole discretion to request that you remove all links or any particular link to our Web site. You agree to immediately remove all links to our Web site upon such request. We also reserve the right to amend these terms and conditions and its linking policy at any time. By continuing to link to our Web site, you agree to be bound to and abide by these linking terms and conditions.</p>

        <h2>Removal of links from our website</h2>
        <p>If you find any link on our application or any linked web site objectionable for any reason, you may contact us about this. We will consider requests to remove links but will have no obligation to do so or to respond directly to you.</p>
        <p>Whilst we endeavour to ensure that the information on this website is correct, we do not warrant its completeness or accuracy; nor do we commit to ensuring that the website remains available or that the material on the website is kept up to date.</p>

        <h2>Disclaimer</h2>
        <p>To the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our website and the use of this website (including, without limitation, any warranties implied by law in respect of satisfactory quality, fitness for purpose and/or the use of reasonable care and skill). Nothing in this disclaimer will:</p>

        <ol>
            <li>limit or exclude our or your liability for death or personal injury resulting from negligence;</li>
            <li>limit or exclude our or your liability for fraud or fraudulent misrepresentation;</li>
            <li>limit any of our or your liabilities in any way that is not permitted under applicable law; or</li>
            <li>exclude any of our or your liabilities that may not be excluded under applicable law.</li>
        </ol>
        <p>The limitations and exclusions of liability set out in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer or in relation to the subject matter of this disclaimer, including liabilities arising in contract, in tort (including negligence) and for breach of statutory duty.</p>
        <p>To the extent that the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>

        <h2>Credit</h2>
        <p>This Terms and conditions page was created at <a href="http://termsandconditionstemplate.com">terms and conditions</a> template generator</p>
        </body></html>
    </string>
</resources>
