<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.motion.lab.himachat.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fullname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/fullname"
            android:ems="10"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_text"
        android:layout_below="@id/fullname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/email"
            android:ems="10"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/mail_text"
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/username"
            android:ems="10"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/username_text"
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/password"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/register_button"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:lines="1"
        android:maxEms="10"
        android:text="@string/accept"/>
    <LinearLayout
        android:layout_above="@id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/eula_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_short"/>
        <TextView
            android:id="@+id/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"/>
    </LinearLayout>

</RelativeLayout>
