<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.motion.lab.himachat.LoginActivity">
    <!-- Dummy item to prevent EditText from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <!--tombol register-->
    <Button
        android:id="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/register" />
    <!--Tombol sign in-->
    <Button
        android:id="@+id/sign_in_button"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/primary_text_dark"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="52dp"
        android:paddingRight="52dp"
        android:lines="1"
        android:maxEms="10"
        android:text="@string/sign_in"/>
    <!--Menampung input password-->
    <EditText
        android:id="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:inputType="textPassword"
        android:lines="1"
        android:maxEms="10"
        android:hint="@string/password" />
    <!--Menampung input username-->
    <EditText
        android:id="@+id/username_text"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:lines="1"
        android:maxEms="10"
        android:hint="@string/username"/>
</RelativeLayout>
